logs/easy-ansible.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/easy_ansible'...
Compiling './lib/python3.5/site-packages/easy_ansible/ansible_19_api.py'...
***   File "./lib/python3.5/site-packages/easy_ansible/ansible_19_api.py", line 23
    print '[ansible] Ansible命令执行结果: \n%s' % json.dumps(self.results_raw, indent=4)
                                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/easy_ansible/ansible_24_api.py'...
***   File "./lib/python3.5/site-packages/easy_ansible/ansible_24_api.py", line 18
    print json.dumps({host.name: result._result}, indent=4)
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/easy_ansible-1.0.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
